--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -3028,7 +3028,7 @@ classification-rule-help=Eine Klassifizierungsregel beschreibt die Merkmale der 
 classification-rules=Klassifizierungsregeln
 classification-rules-for-x=Klassifizierungsregel für {0}
 clause-contributors=Klausel-Mitwirkender
-clause-contributors-description=The Search Framework Query Contributors should almost always be enabled. Disable one or more to remove certain contributors from participating in the search. Override the behavior by adding your own Query Elements. (Automatic Copy)
+clause-contributors-description=The search framework query contributors should almost always be enabled. Disable one or more to remove certain contributors from participating in the search. Override the behavior by adding your own query elements. (Automatic Copy)
 clay-card-display-types=Clay Karte Anzeigetypen
 clean-up-actions=Bereinigungsoptionen
 clean-up-chat-module-data=Daten des Chat-Moduls bereinigen.
@@ -5484,7 +5484,7 @@ element-json=Element JSON
 element-removed=Element entfernt
 element-sets=Elementsets
 element-source=Element Source (Automatic Copy)
-element-source-description=Define the query clauses and configurations that this Element should add to the search. (Automatic Copy)
+element-source-description=Define the query clauses and configurations that this element should add to the search. (Automatic Copy)
 element-source-json=Elementquelle (JSON)
 element-template=Elementvorlage
 element-was-added=Element wurde hinzugefügt.
@@ -12969,7 +12969,7 @@ search-for-step-name=Nach Schrittnamen suchen...
 search-for-x=Nach '{0}' suchen
 search-form=Suchformular
 search-framework-indexer-clauses=Framework-Indexer-Klauseln suchen
-search-framework-indexer-clauses-description=The Search Framework Indexer Clauses setting should almost always be enabled. Disabling it excludes all of Liferay's Indexers from contributing query clauses to the search. (Automatic Copy)
+search-framework-indexer-clauses-description=The search framework indexer clauses setting should almost always be enabled. Disabling it excludes all of Liferay's indexers from contributing query clauses to the search. (Automatic Copy)
 search-framework-indexer-clauses-help=Mit dieser Einstellung können Sie fast alle vom Liferay-Indexer-Framework generierten Standardklauseln deaktivieren. Wenn Sie nur mit dem absoluten Minimum der von Liferay beigesteuerten Suchklauseln beginnen möchten, müssen Sie auch alle Klausel-Mitwirkenden auf dieser Seite deaktivieren.
 search-framework-indexer-clauses-warning=Die Deaktivierung von Indexer-Klauseln kann zu unerwarteten Problemen führen.
 search-framework-query-contributors=Such-Framework-Abfrage Mitwirkende
