--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -3028,7 +3028,7 @@ classification-rule-help=Una regla de clasificación especifica las característ
 classification-rules=Criterio de clasificación
 classification-rules-for-x=Reglas de clasificación para {0}
 clause-contributors=Contribuidores de cláusula
-clause-contributors-description=The Search Framework Query Contributors should almost always be enabled. Disable one or more to remove certain contributors from participating in the search. Override the behavior by adding your own Query Elements. (Automatic Copy)
+clause-contributors-description=The search framework query contributors should almost always be enabled. Disable one or more to remove certain contributors from participating in the search. Override the behavior by adding your own query elements. (Automatic Copy)
 clay-card-display-types=Tipos de visualización de tarjeta Clay
 clean-up-actions=Acciones de limpieza
 clean-up-chat-module-data=Limpia los datos del módulo de chat.
@@ -5484,7 +5484,7 @@ element-json=JSON del elemento
 element-removed=Elemento quitado
 element-sets=Conjuntos de elementos
 element-source=Element Source (Automatic Copy)
-element-source-description=Define the query clauses and configurations that this Element should add to the search. (Automatic Copy)
+element-source-description=Define the query clauses and configurations that this element should add to the search. (Automatic Copy)
 element-source-json=Código fuente del elemento (JSON)
 element-template=Plantilla del elemento
 element-was-added=Se añadió el elemento.
@@ -12969,7 +12969,7 @@ search-for-step-name=Buscar por nombre del paso
 search-for-x=Buscar '{0}'
 search-form=Formulario de búsqueda
 search-framework-indexer-clauses=Cláusulas del indexador del marco de búsqueda
-search-framework-indexer-clauses-description=The Search Framework Indexer Clauses setting should almost always be enabled. Disabling it excludes all of Liferay's Indexers from contributing query clauses to the search. (Automatic Copy)
+search-framework-indexer-clauses-description=The search framework indexer clauses setting should almost always be enabled. Disabling it excludes all of Liferay's indexers from contributing query clauses to the search. (Automatic Copy)
 search-framework-indexer-clauses-help=Este ajuste puede deshabilitar casi todas las cláusulas estándar generadas por el marco del indexador de Liferay. Para empezar con el mínimo de cláusulas de búsqueda contribuidas de Liferay, también debe deshabilitar todos los contribuidores de cláusula en esta página.
 search-framework-indexer-clauses-warning=Si deshabilita las cláusulas del indexador, pueden producirse problemas inesperados.
 search-framework-query-contributors=Contribuidores de consulta del marco de búsqueda
