--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -3028,7 +3028,7 @@ classification-rule-help=Luokittelu säännöt määrittelevät laitteiden omina
 classification-rules=Luokittelusäännöt
 classification-rules-for-x=Luokittelu säännöt [0}:lle.
 clause-contributors=Lauseketekijät
-clause-contributors-description=The Search Framework Query Contributors should almost always be enabled. Disable one or more to remove certain contributors from participating in the search. Override the behavior by adding your own Query Elements. (Automatic Copy)
+clause-contributors-description=The search framework query contributors should almost always be enabled. Disable one or more to remove certain contributors from participating in the search. Override the behavior by adding your own query elements. (Automatic Copy)
 clay-card-display-types=Clay-korttien näyttötyypit
 clean-up-actions=Siivoustoiminnat
 clean-up-chat-module-data=Puhdista chat-moduulin tiedot.
@@ -5484,7 +5484,7 @@ element-json=Elementin JSON
 element-removed=Elementti poistettu
 element-sets=Elementtisarjat
 element-source=Element Source (Automatic Copy)
-element-source-description=Define the query clauses and configurations that this Element should add to the search. (Automatic Copy)
+element-source-description=Define the query clauses and configurations that this element should add to the search. (Automatic Copy)
 element-source-json=Elementin lähde (JSON)
 element-template=Elementtimalli
 element-was-added=Elementti lisättiin.
@@ -12966,7 +12966,7 @@ search-for-step-name=Etsi Vaiheen Nimeä...
 search-for-x=Hae '{0}':aa
 search-form=Hakulomake
 search-framework-indexer-clauses=Hakukehyksen indeksoijan lauseet
-search-framework-indexer-clauses-description=The Search Framework Indexer Clauses setting should almost always be enabled. Disabling it excludes all of Liferay's Indexers from contributing query clauses to the search. (Automatic Copy)
+search-framework-indexer-clauses-description=The search framework indexer clauses setting should almost always be enabled. Disabling it excludes all of Liferay's indexers from contributing query clauses to the search. (Automatic Copy)
 search-framework-indexer-clauses-help=Tämä asetus voi poistaa käytöstä lähes kaikki Liferayn indeksoijakehyksen luomat vakiolausekkeet. Aloittaaksesi vain välttämättömillä Liferayn hakulausekkeilla sinun täytyy myös poistaa käytöstä kaikki lausetekijät tällä sivulla.
 search-framework-indexer-clauses-warning=Indeksoijan lauseiden poistaminen käytöstä voi aiheuttaa odottamattomia ongelmia.
 search-framework-query-contributors=Hakukehyksen kyselytekijät
