--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -3028,7 +3028,7 @@ classification-rule-help=Une règle de classification spécifie les caractérist
 classification-rules=Règles de classification
 classification-rules-for-x=Règles de classification pour {0}
 clause-contributors=Contributeurs de clause
-clause-contributors-description=The Search Framework Query Contributors should almost always be enabled. Disable one or more to remove certain contributors from participating in the search. Override the behavior by adding your own Query Elements. (Automatic Copy)
+clause-contributors-description=The search framework query contributors should almost always be enabled. Disable one or more to remove certain contributors from participating in the search. Override the behavior by adding your own query elements. (Automatic Copy)
 clay-card-display-types=Types d'affichage de carte clay
 clean-up-actions=Nettoyer les actions
 clean-up-chat-module-data=Nettoyez les données du module de chat.
@@ -5484,7 +5484,7 @@ element-json=Élément JSON
 element-removed=Élément supprimé
 element-sets=Jeux d'éléments
 element-source=Element Source (Automatic Copy)
-element-source-description=Define the query clauses and configurations that this Element should add to the search. (Automatic Copy)
+element-source-description=Define the query clauses and configurations that this element should add to the search. (Automatic Copy)
 element-source-json=Source de l'élément (JSON)
 element-template=Modèle d'élément
 element-was-added=L'élément a été ajouté.
@@ -12969,7 +12969,7 @@ search-for-step-name=Recherche du nom d'étape
 search-for-x=Recherche pour '{0}'
 search-form=Formulaire de recherche
 search-framework-indexer-clauses=Clauses d'indexation du framework de recherche
-search-framework-indexer-clauses-description=The Search Framework Indexer Clauses setting should almost always be enabled. Disabling it excludes all of Liferay's Indexers from contributing query clauses to the search. (Automatic Copy)
+search-framework-indexer-clauses-description=The search framework indexer clauses setting should almost always be enabled. Disabling it excludes all of Liferay's indexers from contributing query clauses to the search. (Automatic Copy)
 search-framework-indexer-clauses-help=Ce paramètre peut désactiver presque toutes les clauses standard générées par le framework d'indexation Liferay. Pour commencer avec le strict minimum des clauses de recherche de contribution de Liferay, vous devez également désactiver tous les contributeurs de clause dans cette page.
 search-framework-indexer-clauses-warning=La désactivation des clauses d'indexation peut entraîner des problèmes inattendus.
 search-framework-query-contributors=Contributeurs de requêtes du framework de recherche
