--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -3028,7 +3028,7 @@ classification-rule-help=Regras de classificação especificam as característic
 classification-rules=Regra de Classificação
 classification-rules-for-x=Regras de classificação para {0}
 clause-contributors=Contribuintes da cláusula
-clause-contributors-description=The Search Framework Query Contributors should almost always be enabled. Disable one or more to remove certain contributors from participating in the search. Override the behavior by adding your own Query Elements. (Automatic Copy)
+clause-contributors-description=The search framework query contributors should almost always be enabled. Disable one or more to remove certain contributors from participating in the search. Override the behavior by adding your own query elements. (Automatic Copy)
 clay-card-display-types=Tipo de exibição do cartão de argila
 clean-up-actions=Ações de Limpeza
 clean-up-chat-module-data=Remover os dados do módulo de bate-papo.
@@ -5484,7 +5484,7 @@ element-json=Element JSON
 element-removed=Elemento removido
 element-sets=Conjunto de elementos
 element-source=Element Source (Automatic Copy)
-element-source-description=Define the query clauses and configurations that this Element should add to the search. (Automatic Copy)
+element-source-description=Define the query clauses and configurations that this element should add to the search. (Automatic Copy)
 element-source-json=Fonte do elemento (JSON)
 element-template=Modelo de elemento
 element-was-added=O elemento foi adicionado.
@@ -12967,7 +12967,7 @@ search-for-step-name=Buscar por Nome de Etapa
 search-for-x=Pesquisar por '{0}'
 search-form=Buscar de
 search-framework-indexer-clauses=Pesquisar clausulas do indexador framework
-search-framework-indexer-clauses-description=The Search Framework Indexer Clauses setting should almost always be enabled. Disabling it excludes all of Liferay's Indexers from contributing query clauses to the search. (Automatic Copy)
+search-framework-indexer-clauses-description=The search framework indexer clauses setting should almost always be enabled. Disabling it excludes all of Liferay's indexers from contributing query clauses to the search. (Automatic Copy)
 search-framework-indexer-clauses-help=Esta configuração pode desativar quase todas as clausulas padrão geradas no framework do indexador Liferay. Para começar com o mínimo de cláusulas de pesquisa contribuídas do Liferay, você também deve desabilitar todos os contribuidores de cláusulas nesta página.
 search-framework-indexer-clauses-warning=Desativar clausulas do indexador pode causar problemas inesperados.
 search-framework-query-contributors=Pesquisar contribuidores de consulta de framework
