--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -3028,7 +3028,7 @@ classification-rule-help=En klassificeringsregel specificerar egenskaperna hos e
 classification-rules=Lägg till klassificeringsregel
 classification-rules-for-x=Klassificeringsregler för {0}
 clause-contributors=Klausuldeltagare
-clause-contributors-description=The Search Framework Query Contributors should almost always be enabled. Disable one or more to remove certain contributors from participating in the search. Override the behavior by adding your own Query Elements. (Automatic Copy)
+clause-contributors-description=The search framework query contributors should almost always be enabled. Disable one or more to remove certain contributors from participating in the search. Override the behavior by adding your own query elements. (Automatic Copy)
 clay-card-display-types=Visningstyper för Clay-kort
 clean-up-actions=Åtgärder för att rensa
 clean-up-chat-module-data=Moduldata för att rensa chatt.
@@ -5484,7 +5484,7 @@ element-json=Elements-JSON
 element-removed=Element har tagits bort
 element-sets=Elementuppsättningar
 element-source=Element Source (Automatic Copy)
-element-source-description=Define the query clauses and configurations that this Element should add to the search. (Automatic Copy)
+element-source-description=Define the query clauses and configurations that this element should add to the search. (Automatic Copy)
 element-source-json=Elementkälla (JSON)
 element-template=Elementmall
 element-was-added=Element har lagts till.
@@ -12967,7 +12967,7 @@ search-for-step-name=Sök efter stegnamn...
 search-for-x=Sök efter '{0}'
 search-form=Sökformulär
 search-framework-indexer-clauses=Sök efter klausuler för ramverksindexerare
-search-framework-indexer-clauses-description=The Search Framework Indexer Clauses setting should almost always be enabled. Disabling it excludes all of Liferay's Indexers from contributing query clauses to the search. (Automatic Copy)
+search-framework-indexer-clauses-description=The search framework indexer clauses setting should almost always be enabled. Disabling it excludes all of Liferay's indexers from contributing query clauses to the search. (Automatic Copy)
 search-framework-indexer-clauses-help=Den här inställningen kan inaktivera alla standardklausuler som genereras av Liferays indexerarramverk. För att starta med minimum av Liferays sökklausuler måste du även inaktivera alla klausuldeltagare på den här sidan.
 search-framework-indexer-clauses-warning=Om du inaktiverar indexerarklausuler kan oväntade problem uppstå.
 search-framework-query-contributors=Sök efter deltagare för ramverksfråga
