--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -3028,7 +3028,7 @@ classification-rule-help=A besorolási szabályok meghatározzák azon eszközö
 classification-rules=Besorolási szabályok
 classification-rules-for-x=Besorolási szabályok ennek: {0}
 clause-contributors=Kifejezés közreműködői
-clause-contributors-description=The Search Framework Query Contributors should almost always be enabled. Disable one or more to remove certain contributors from participating in the search. Override the behavior by adding your own Query Elements. (Automatic Copy)
+clause-contributors-description=The search framework query contributors should almost always be enabled. Disable one or more to remove certain contributors from participating in the search. Override the behavior by adding your own query elements. (Automatic Copy)
 clay-card-display-types=Agyagkártya megjelenítési típusok
 clean-up-actions=Tisztító tevékenységek
 clean-up-chat-module-data=Tisztítsa ki a csevegés modul adatait.
@@ -5484,7 +5484,7 @@ element-json=Elem JSON-ja
 element-removed=Elem eltávolítva
 element-sets=Elemkészletek
 element-source=Element Source (Automatic Copy)
-element-source-description=Define the query clauses and configurations that this Element should add to the search. (Automatic Copy)
+element-source-description=Define the query clauses and configurations that this element should add to the search. (Automatic Copy)
 element-source-json=Elem forrása (JSON)
 element-template=Elemsablon
 element-was-added=Az elem hozzá lett adva.
@@ -12970,7 +12970,7 @@ search-for-step-name=Lépés elnevezésének a keresése...
 search-for-x='{0}' keresése
 search-form=Kereső űrlap
 search-framework-indexer-clauses=Keresési keretrendszer indexelő kifejezései
-search-framework-indexer-clauses-description=The Search Framework Indexer Clauses setting should almost always be enabled. Disabling it excludes all of Liferay's Indexers from contributing query clauses to the search. (Automatic Copy)
+search-framework-indexer-clauses-description=The search framework indexer clauses setting should almost always be enabled. Disabling it excludes all of Liferay's indexers from contributing query clauses to the search. (Automatic Copy)
 search-framework-indexer-clauses-help=Ez a beállítás kikapcsolhatja a Liferay indexelő keretrendszer által generált összes standard kifejezést. Ha csak a Liferay közreműködésével létrejött minimális keresési kifejezésekkel kíván kezdeni, a kifejezések összes közreműködőjét is ki kell kapcsolnia ezen az oldalon.
 search-framework-indexer-clauses-warning=Az indexelő kifejezéseinek a kikapcsolása váratlan problémákat okozhat.
 search-framework-query-contributors=Keresési keretrendszer lekérdezés-közreműködői
