--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -3028,7 +3028,7 @@ classification-rule-help=Een classificatieregel specificeert de kenmerken van de
 classification-rules=Classificatieregels
 classification-rules-for-x=Classificatieregels voor {0}
 clause-contributors=Componentbijdragers
-clause-contributors-description=The Search Framework Query Contributors should almost always be enabled. Disable one or more to remove certain contributors from participating in the search. Override the behavior by adding your own Query Elements. (Automatic Copy)
+clause-contributors-description=The search framework query contributors should almost always be enabled. Disable one or more to remove certain contributors from participating in the search. Override the behavior by adding your own query elements. (Automatic Copy)
 clay-card-display-types=Weergavetypes kleikaart
 clean-up-actions=Opschoonacties
 clean-up-chat-module-data=Gegevens chatmodule opschonen.
@@ -5484,7 +5484,7 @@ element-json=Element-JSON
 element-removed=Element verwijderd
 element-sets=Elementensets
 element-source=Element Source (Automatic Copy)
-element-source-description=Define the query clauses and configurations that this Element should add to the search. (Automatic Copy)
+element-source-description=Define the query clauses and configurations that this element should add to the search. (Automatic Copy)
 element-source-json=Elementbron (JSON)
 element-template=Elementsjabloon
 element-was-added=Het element is toegevoegd.
@@ -12970,7 +12970,7 @@ search-for-step-name=Naam stap zoeken ...
 search-for-x=Naar '{0}' zoeken
 search-form=Zoekformulier
 search-framework-indexer-clauses=Indexerstructuurcomponenten zoeken
-search-framework-indexer-clauses-description=The Search Framework Indexer Clauses setting should almost always be enabled. Disabling it excludes all of Liferay's Indexers from contributing query clauses to the search. (Automatic Copy)
+search-framework-indexer-clauses-description=The search framework indexer clauses setting should almost always be enabled. Disabling it excludes all of Liferay's indexers from contributing query clauses to the search. (Automatic Copy)
 search-framework-indexer-clauses-help=Met deze instelling kunt u bijna alle standaardcomponenten uitschakelen die door de indexerstructuur van Liferay gegenereerd worden. Om te beginnen met alleen het absolute minimum aan bijgedragen zoekcomponenten van Liferay, moet u op deze pagina ook alle componentbijdragers uitschakelen.
 search-framework-indexer-clauses-warning=Indexercomponenten uitschakelen kan onverwachte problemen veroorzaken.
 search-framework-query-contributors=Querybijdragers zoekstructuur
